force-app/main/default/objects/Remediation_Action__c/Remediation_Action__c.object-meta.xml
<CustomObject>
    <label>Remediation Action</label>
    <nameField>
        <displayFormat>RA-{00000}</displayFormat>
        <label>Remediation Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remediation Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>