force-app/main/default/objects/Remediation_Action__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deactivate Field</fullName>
            </value>
            <value>
                <fullName>Delete Flow Version</fullName>
            </value>
            <value>
                <fullName>Add Fault Path</fullName>
            </value>
            <value>
                <fullName>Update FLS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>