force-app/main/default/objects/Remediation_Action__c/fields/Applied_By__c.field-meta.xml
<CustomField>
    <fullName>Applied_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applied By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Remediation_Actions_Applied</relationshipName>
    <type>Lookup</type>
</CustomField>