force-app/main/default/objects/Remediation_Action__c/fields/Debt_Finding__c.field-meta.xml
<CustomField>
    <fullName>Debt_Finding__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Debt Finding</label>
    <referenceTo>Debt_Finding__c</referenceTo>
    <relationshipLabel>Remediation Actions</relationshipLabel>
    <relationshipName>Remediation_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>