force-app/main/default/objects/Remediation_Action__c/fields/Metadata_Diff__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Diff__c</fullName>
    <label>Metadata Diff</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>